--- a/instituidoVSinstituyente.html
+++ b/instituidoVSinstituyente.html
@@ -70,7 +70,7 @@
                 <h1 class="project-title">Lo Instituyente en las sociedades contemporáneas - Compiló Mg. Álvaro Diaz</h1>
             </div>
             <div class="project-links">
-                    <a href="biografias/Paulo_Freire.html" class="project-link">
+                    <a href="biografias/Gerardus_Castodiadis.html" class="project-link">
                         <i class="fas fa-user">  </i>Biografia de Gerardus Castodiadis
                     </a>
                     <a href="glosario.html" class="project-link demo">
@@ -98,49 +98,53 @@
                     <div class="resource-icon">
                         <i class="fa-regular fa-note-sticky"></i>
                     </div>
-                    <h3 class="resource-title">2. ¿Cuáles son los tres tipos de conciencia indentifiacdos por Paulo Freire?</h3>
-                    <p class="resource-desc">Rta: Conciencia intransitiva o magica, <br>conciencia transitiva o ingenua <br>y conciencia critica</p>
+                    <h3 class="resource-title">2. ¿Cómo se relacionan las protestas sociales con el sistema en el que nos desarrollamos, y qué papel juegas en la dinámica de las instituciones?</h3>
+                    <p class="resource-desc">Rta: Las protestas sociales surgen de la tensión entre lo instituido y lo instituyente. Son expresión de los conflictos del sistema en el que vivimos y una vía para transformarlo. Mi papel es participar en ambas dimensiones: formo las reglas del sistema, pero también puedo cuestionarlas y ser agente de cambio.</p>
                 </div>
 
                 <div class="resource-card">
                     <div class="resource-icon">
                         <i class="fa-solid fa-pen-to-square"></i>
                     </div>
-                    <h3 class="resource-title">3. ¿Cómo se caracteriza la conciencia mágica y qué implicaciones tiene  en la comprensión de la realidad?</h3>
+                    <h3 class="resource-title">3. ¿De qué manera las manifestaciones públicas pueden fortalecer el significado  de la sociedad, incluso cuando se rebelan contra ciertas circunstancias sociales?</h3>
                     <p class="resource-desc">
-                        Rta: Se caracteriza por ser una conciencia que en pocas palabras no le importa lo que pasa en el mundo exterior es decir que no se preocupa por el mundo exterior. lo que pasa afuera de su casa, de su comunidad, en su pais, no le importa absolutamente nada, solo es el y nadie mas.</p>
+                        Rta: Las manifestaciones públicas fortalecen el significado de la sociedad porque son una forma de expresión colectiva donde los individuos se reconocen como parte de un grupo con intereses, necesidades y valores comunes. Aunque se rebelen contra lo instituido, al hacerlo reafirman la capacidad de la sociedad de cuestionarse, dialogar y transformarse.</p>
                 </div>
 
                 <div class="resource-card">
                     <div class="resource-icon">
                         <i class="fas fa-tools"></i>
                     </div>
-                    <h3 class="resource-title">4. ¿Qué diferencias hay entre la conciencia ingenua y la conciencia crítica?</h3>
-                    <p class="resource-desc">Rta: La diferencia es que la conciencia ingenua no valora el ser humano, es mjuy simple en la interpretación de problemas y tiende ir siempre al pasado; mientras que la conciencia critica valora el ser humano y se preocupa por el presente y futuro, sabe cual es su lugar en el mundo tiene la capacidad de trasformar y cuidar los seres vivos del universo.</p>
+                    <h3 class="resource-title">4. ¿Cómo está cambiando la concepción  tradicional de familia en la sociedad contemporánea, y qué factores están influyendo en estos cambios?</h3>
+                    <p class="resource-desc">Rta: La familia tradicional está cambiando hacia una concepción más diversa, donde se reconocen modelos como familias monoparentales, homoparentales o reconstituidas. Estos cambios están influenciados por factores culturales (igualdad de género, diversidad), económicos (incorporación laboral de la mujer), legales (matrimonios igualitarios), tecnológicos (reproducción asistida) y la globalización que amplía nuevas formas de convivencia.</p>
                 </div>
 
                 <div class="resource-card">
-                    <h3 class="resource-title">5. ¿Cómo se puede promover el desarrollo de la conciencia crítica en las personas?</h3>
-                    <p class="resource-desc">Rta: Para promover el desarrollo de la conciencia critica se debe hacer un proceso de concientización que asume una intitucion de educacion superior como política pública y como opción personal, en un espacion de enseñanza  y aprendizaje donde existan las condiciones para el desarrollo de la conciencia critica y que se asuman proyecos de trasformación social en diferentes sectores de la sociedad.</p>
+                    <h3 class="resource-title">5. ¿De qué manera las leyes y regulaciones que buscan controlar las manifestaciones pacíficas afectan la libertad de expreción y la capacidad de protesta de los ciudadanos en diferentes países, como México y España?</h3>
+                    <p class="resource-desc">Rta: Las leyes que regulan las manifestaciones pacíficas afectan la libertad de expresión al limitar la capacidad de protesta. En México, la represión y criminalización desalientan la movilización, mientras que en España la “Ley Mordaza” impone sanciones que generan autocensura. Aunque se justifican por el orden público, estas medidas reducen la participación ciudadana y debilitan la democracia.</p>
                 </div>
 
                 <div class="resource-card">
-                    <h3 class="resource-title">6. ¿Qué papel juega la educación  en la formación de la conciencia crítica y la transformación social?</h3>
-                    <p class="resource-desc">Rta: Juega un papel importante ya que la formación promueve la conciencia crítica lo cual con una buena base de conciencia permite la transformación social permitiendo cambiar el comunidades para bien, comprender el mundo y el ser humano.</p>
+                    <h3 class="resource-title">6. ¿Cómo ha cambiado la percepción y el uso de las marchas y manifestaciones en la Ciudad de México, y qué impacto ha tenido esto en su efectividad como herramienta de protesta y cambio social?</h3>
+                    <p class="resource-desc">Rta: En la Ciudad de México las marchas pasaron de ser vistas como actos de confrontación reprimidos (años 60–80) a reconocerse como un derecho y una práctica común de participación social. Hoy son una herramienta clave de protesta y visibilización, aunque algunos sectores las perciben como molestias. Su efectividad ha logrado avances en temas de género y derechos, pero la normalización de su uso exige combinarlas con estrategias digitales y mediáticas para mantener impacto.</p>
                 </div>
 
-                
+                <div class="resource-card">
+                    <h3 class="resource-title">7. ¿Qué se entiende por "lo instituyenye" en el contexto de los cambios sociales y culturales, y cómo se relaciona con la capacidad de los individuos y las sociedades para transformar su realidad y crear nuevas significaciones sociales?</h3>
+                    <p class="resource-desc">Rta: Lo instituyente es la fuerza social que impulsa el cambio y la creación de nuevas significaciones. Se opone a lo instituido, que son las normas y estructuras ya establecidas. Representa la capacidad de los individuos y las sociedades de transformar su realidad mediante la protesta, la innovación cultural o la organización colectiva, generando así nuevas formas de entender y vivir lo social.</p>
+                </div>
+
+                <div class="resource-card">
+                    <h3 class="resource-title">8. Elabore una cuartilla con los conceptos de instituido e instituyebte de Gerardus Castodiadis.</h3>
+                    <p class="resource-desc">Rta: El pensamiento de Cornelius Castoriadis ha sido fundamental para comprender la dinámica entre estabilidad y cambio en las sociedades. Dos de sus conceptos más importantes son lo instituido y lo instituyente, los cuales permiten explicar cómo se configuran y transforman las significaciones sociales.
+<br>
+Por lo instituido se entiende el conjunto de normas, valores, instituciones, tradiciones y prácticas que regulan la vida social. Es el orden establecido que otorga estabilidad y continuidad a la sociedad. Gracias a lo instituido existen leyes, sistemas educativos, religiones, formas de organización política y cultural que dan sentido y coherencia a la vida colectiva. Sin embargo, este orden no es natural ni eterno: es resultado de decisiones históricas que en algún momento fueron creadas por procesos humanos.
+<br>
+En contraste, lo instituyente representa la fuerza creadora, crítica y transformadora que cuestiona lo dado y busca abrir nuevas posibilidades. Es el momento de la imaginación radical de la sociedad, donde se gestan nuevas significaciones colectivas que pueden modificar o reemplazar lo instituido. Lo instituyente se manifiesta en movimientos sociales, protestas, innovaciones culturales, luchas por derechos y en toda acción que desafía el orden vigente para proponer alternativas.
+<br>
+La tensión entre lo instituido y lo instituyente es permanente: el primero garantiza estabilidad y cohesión, mientras que el segundo introduce el cambio y la renovación. Castoriadis destaca que la historia humana se mueve en este diálogo constante. Así, las sociedades no solo reproducen lo existente, sino que también poseen la capacidad de autocrearse, generando nuevas formas de vida, valores y significados.</p>
+                </div>
             </div>
-            <br>
-            <div class="resource-card">
-                <h3 class="resource-title">7. Elabore un mapa conceptual sobre los tipos de conciencia que propone Paulo Freire.</h3>
-                <p class="resource-desc">Rta: Mapa Conceptual
-                    <br> <br>
-                <a href="https://lucid.app/lucidspark/4e91f625-306c-4e9b-94a8-3531e995082f/edit?viewport_loc=-171%2C670%2C3084%2C1443%2C0_0&invitationId=inv_0043ed53-55a8-484a-8d1b-5b8b97ff2a8c" class="project-link"> Ver Mapa</a>
-            </p>
-            <br>
-            <img src="Mapa conceptual-tipos de conciencia.png" class="img">
-        </div>
         </div>
     </main>
 
