--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
 
             <a href="#proyectos" class="cta-button">Ver Actividades <i class="fas fa-arrow-down"></i></a>
+
+            <a href="Chequeo.html" class="cta-button">Lista de Chequeo <i class="fas fa-arrow-right"></i></a>
         </div>
     </section>
 
